rspec-tools/tests/resources/invalid-asciidoc/link_rule_sonarsource_com.adoc
== Title

In this case, there is also an impact on reliability and so it is handled by the rule https://rules.sonarsource.com/java/RSPEC-5810/[S5810].

=== Documentation

* https://rules.sonarsource.com/csharp/RSPEC-6420/[S6420 - Client instances should not be recreated on each Azure Function invocation]


ifdef::env-github,rspecator-view[]

https://rules.sonarsource.com/csharp/RSPEC-6420/[We ignore rspecator view]

endif::env-github,rspecator-view[]

http://rules.sonarsource.com/csharp/RSPEC-6420/[We detect http too]